Delete -javaagent argument from pom.xml, its brake maven test.