@@ -36,11 +36,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <argLine>
-            --illegal-access=permit
-            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-          </argLine>
-          <suiteXmlFiles>
+         <suiteXmlFiles>
             <suiteXmlFile>
               ${maven-surefire-plugin.suiteXmlFile}
             </suiteXmlFile>
